<resources>
    <string name="app_name">RickAndMortyApp</string>

    <string name="character_description_string">Character Description</string>
    <string name="descriptionCharacterName">Rick Sanchez</string>
    <string name="characterName">Name:</string>
    <string name="descriptionCharacterStatus">Alive</string>
    <string name="descriptionCharacterSpecies">Human</string>
    <string name="descriptionCharacterGender">Male</string>
    <string name="characterStatus">Status:</string>
    <string name="characterSpecies">Species:</string>
    <string name="characterGender">Gender:</string>
    <string name="itemCharacterName">Character Name</string>
    <string name="characterDescriptionImage">Image</string>
    <string name="character_add_image">Image</string>
    <string name="add_to_favorites">ADD TO FAVORITES</string>
    <string name="bottom_navbar_list">List</string>
    <string name="bottom_navbar_fav">Favorites</string>
    <string name="bottom_navbar_info">Info</string>
    <string name="delete_from_favorites">delete from favorites</string>
    <string name="NavBarHome">Home</string>
    <string name="NavBarFavorites">Favorites</string>
    <string name="NavBarProfile">Profile</string>
    <string name="check_internet_connection">Check your internet connection</string>
    <string name="app_author_wojciech_rudol">App Author: Wojciech Rudol</string>
    <string name="contact_wojciechrudol_gmail_com">Contact: wojciechrudol@gmail.com</string>
    <string name="copy_e_mail">Copy E-Mail</string>
    <string name="night_mode">Change Theme</string>
    <string name="change_mode">Change Mode</string>
    <string name="swipe_info">Swipe for more information > > </string>
    <string name="dog_content_description">text</string>
</resources>