<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/appAuthorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_author_wojciech_rudol"
        app:layout_constraintBottom_toTopOf="@+id/authorContactText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/authorContactText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_wojciechrudol_gmail_com"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/copyAuthorMailBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy_e_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorContactText" />


</androidx.constraintlayout.widget.ConstraintLayout>